chore: #1290 Add tests for AsyncAPITestManager and remove some code smells Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>